force-app/main/default/objects/FN_Projection__c/FN_Projection__c.object-meta.xml
<CustomObject>
    <description>an agile projection record</description>
    <label>Projection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>