force-app/main/default/objects/FN_Projection__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The project description</description>
    <inlineHelpText>The project description</inlineHelpText>
    <label>Description</label>
    <length>512</length>
    <type>Html</type>
</CustomField>