force-app/main/default/objects/FN_Projection__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Epic</description>
    <inlineHelpText>The related Epic.  This is used when creating the Work records.</inlineHelpText>
    <label>Epic</label>
    <referenceTo>agf__ADM_Epic__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <type>Lookup</type>
</CustomField>