force-app/main/default/objects/FN_Projection__c/fields/ProductTag__c.field-meta.xml
<CustomField>
    <fullName>ProductTag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related product tag that will be used for all related project lines that become work items.</description>
    <inlineHelpText>Select the product tag.  The value will be used when creating work items.</inlineHelpText>
    <label>Product Tag</label>
    <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Projections</relationshipLabel>
    <relationshipName>Projections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>