force-app/main/default/objects/FN_Projection__c/fields/ProjectedDurationWithBuffer__c.field-meta.xml
<CustomField>
    <fullName>ProjectedDurationWithBuffer__c</fullName>
    <description>The projected amount of time in work rate units, including the buffer, to complete the work for this project.</description>
    <inlineHelpText>The projected time, in Work Rate units, to complete the work.</inlineHelpText>
    <label>Projected Duration w/Buffer</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>