force-app/main/default/objects/FN_Projection__c/fields/ProjectionSheet__c.field-meta.xml
<CustomField>
    <fullName>ProjectionSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projection Sheet</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Feature record type is the only type that can be linked to a Sheet record type.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filterItems>
        <filterItems>
            <field>FN_Projection__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sheet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FN_Projection__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>