force-app/main/default/objects/FN_Projection__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>The size of a feature or an entire projection</description>
    <label>Size</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>