force-app/main/default/objects/FN_Projection__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>Work Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SteerCo</fullName>
                <default>true</default>
                <label>SteerCo</label>
            </value>
            <value>
                <fullName>KLO</fullName>
            </value>
            <value>
                <fullName>F&amp;E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>