force-app/main/default/objects/FN_Projection__c/recordTypes/ProjectionFeature.recordType-meta.xml
<RecordType>
    <fullName>ProjectionFeature</fullName>
    <active>true</active>
    <description>A group of project items that make up a feature</description>
    <label>Feature</label>
</RecordType>