force-app/main/default/objects/FN_Projection__c/recordTypes/ProjectionSheet.recordType-meta.xml
<RecordType>
    <fullName>ProjectionSheet</fullName>
    <active>true</active>
    <description>A new projection sheet that contains projection line items optionally grouped by feature</description>
    <label>Sheet</label>
</RecordType>